Enable non-emulated stage XRFrameOfReferences

Bug: 833196
Change-Id: Idd47df99dc9e98b627ba1e6aead0b9a7c5e6f631
Reviewed-on: https://chromium-review.googlesource.com/1014626
Reviewed-by: Brian Sheedy <bsheedy@chromium.org>
Reviewed-by: Klaus Weidner <klausw@chromium.org>
Commit-Queue: Brandon Jones <bajones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552252}
Former-commit-id: ca3a73cacf2d8b8feb9e1bb463bb39d39f155831